fix(Table): fix table-row vertical-align

--- a/packages/orion/src/Table/table.css
+++ b/packages/orion/src/Table/table.css
@@ -45,6 +45,7 @@
 
 .orion.table tbody > .table-row {
   @apply table-row;
+  vertical-align: inherit;
 }
 
 .orion.table tbody > .table-row > td {
